# sis-cli

./: README.md  pyproject.toml  setup.py
sis/: __main__.py  classes.py  course.py  enrollments.py  sis.py  student.py  terms.py
